completed js file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Psychic Game</h1>
         <h2>Guess what letter I'm thinking of</h2>
         <p id= wins> Wins </p>
-        <p id= looses>Losses </p>
+        <p id= losses>Losses </p>
         <p id= left>Guesses you have left </p>
         <p id= guesses>What you've guessed so far </p>
     </div>
